# codepage-437

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  aliases.js  appveyor.yml  build.rs  codepage-437.sublime-project  gh_rsa.enc  search-index.js
codepage_437/: all.html  fn.cp437_to_unicode.html  fn.unicode_to_cp437.html  index.html  sidebar-items.js  static.CP437_CONTROL.html  static.CP437_WINGDINGS.html  struct.Cp437Dialect.html  struct.Cp437Error.html  struct.IntoCp437Error.html  trait.BorrowFromCp437.html  trait.FromCp437.html  trait.IntoCp437.html  trait.ToCp437.html
codepage_437/decode/: cp437_to_unicode.v.html  fn.cp437_to_unicode.html
codepage_437/encode/: fn.unicode_to_cp437.html  unicode_to_cp437.v.html
codepage_437/pc/: BorrowFromPcCp437.t.html  FromPcCp437.t.html  IntoPcCp437.t.html  PcCp437Error.t.html  fn.is_pc_cp437_or_ascii.html  fn.pc_cp437_to_unicode.html  fn.unicode_to_pc_cp437.html  index.html  is_pc_cp437_or_ascii.v.html  sidebar-items.js  struct.IntoPcCp437Error.html  struct.PcCp437Error.html  trait.BorrowFromPcCp437.html  trait.FromPcCp437.html  trait.IntoPcCp437.html  trait.ToPcCp437.html  unicode_to_pc_cp437.v.html
dialect-specs/cp437_control/: documentation.md  overlaps.rs  values.tsv  variants.tsv
dialect-specs/cp437_wingdings/: documentation.md  overlaps.rs  values.tsv  variants.tsv
src/: decode.rs  dialect.rs  encode.rs  lib.rs  pc.rs
src/codepage_437/: decode.rs.html  dialect.rs.html  encode.rs.html  lib.rs.html  pc.rs.html
src/pc/: decode.rs  encode.rs  mod.rs
test-data/cp437_control/: all.utf8
tests/: mod.rs
(+69 files in other folders)
